recusive infinte loop solved

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=O-Way
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/O_Way?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=0111001101101011
+spring.datasource.password=root
 
 # Hibernate auto-create/update tables
 spring.jpa.hibernate.ddl-auto=update
