--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 spring.application.name=O-Way
 
 # MariaDB connection
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/O_Way?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/O_Way?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12817741?createDatabaseIfNotExist=true
+spring.datasource.username=sql12817741
+spring.datasource.password=pinAMcTRLd
 
 # Hibernate auto-create/update tables
 spring.jpa.hibernate.ddl-auto=update
